--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <div class="share">
         <a href="http://android.myapp.com/myapp/detail.htm?apkName=com.aebiz.youshidai&ADTAG=mobile"><div class="androidBtn">
-            <span></span>Android版下载
+            <span></span><em>Android版下载</em>
         </div></a>
         <a href="https://itunes.apple.com/cn/app/you%E6%97%B6%E4%BB%A3/id1241667152?mt=8"><div class="iosBtn">
-            <span></span>iPhone版下载
+            <span></span><em>iPhone版下载</em>
         </div></a>
     </div>
 </body>
