--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         <a href="https://itunes.apple.com/cn/app/you%E6%97%B6%E4%BB%A3/id1241667152?mt=8"><div class="iosBtn">
             <span></span><em>iPhone版下载</em>
         </div></a>
-    </div>
+        <div style="width: 50px;height: 50px; border: 2px solid #f00;"></div>
 </body>
 </html>
